# adventofcode

rust/: Cargo.toml  build.rs  justfile
rust/benches/: count_digits.rs  day11_hash.rs  round_to_nearest_pow2.rs  sum_str_digits.rs
rust/benches/day11_hash/: data.rs
rust/benches/sum_str_digits/: data.rs
rust/src/: commit.rs  days.rs  input.rs  inputs.rs  lib.rs  main.rs
rust/src/auth/: mod.rs  term.rs
rust/src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  dayN.txt  mod.rs
rust/src/days/day16/: viz.rs
rust/src/days/day16/viz/: dijkstras.rs
rust/src/days/day6/: viz_tui.rs
rust/src/days/day6/viz_gtk/: mod.rs  state.rs
rust/src/puzzles/: dayN.txt  mod.rs
rust/src/puzzles/year2024/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
rust/src/puzzles/year2024/day16/: viz.rs
rust/src/puzzles/year2024/day16/viz/: dijkstras.rs
rust/src/puzzles/year2024/day6/viz_gtk/: state.rs  utils.rs
rust/src/puzzles/year2025/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs
