[package]
name = "adventofcode"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
crc = "3.2.1"
criterion = "0.5.1"
crossterm = "0.28.1"
paste = "1.0.15"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "cookies"] }
