[package]
name = "adventofcode"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
bench = []

[[bench]]
name = "count_digits"
harness = false
required-features = ["bench"]

[[bench]]
name = "sum_str_digits"
harness = false

[dependencies]
anyhow = "1.0.94"
bitflags = "2.6.0"
clap = { version = "4.5.23", features = ["derive"] }
crc = "3.2.1"
criterion = "0.5.1"
crossterm = "0.28.1"
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_16"] }
itertools = "0.14.0"
paste = "1.0.15"
rbtree = "0.2.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "cookies"] }
